# Bract

./: .gitignore  ARCHITECTURE.md  Cargo.toml  GRAMMAR.md  LANGUAGE_SPEC.md  PHASE2_ACHIEVEMENT_REPORT.md  README.md  claude_guidance.md  clean_test.bract  cleanup_build_artifacts.ps1  cleanup_build_artifacts.sh  roadmap.md  run_benchmarks.ps1  run_comprehensive_tests.ps1  simple_test.bract  simple_test_utf8.bract  simple_two_functions.bract  test.rs  test_array_final.bract  test_array_vars.bract  test_arrays.bract  test_comprehensive.bract  test_comprehensive_working.bract  test_debug_arrays.bract  test_debug_math.bract  test_if.bract  test_lexer_bom.rs  test_minimal.bract  test_native.bract  test_simple.bract  test_simple_arrays.bract  test_simple_if.bract  test_simple_method.bract  test_variables.bract
--debug/: prism_runtime.c  test_reference_fix.c
.cursor/rules/: claude-guidance.mdc
examples/: benchmark_memory_strategies.bract  complex_loops.bract  comprehensive_validation.bract  deep_recursion.bract  fibonacci_recursive.bract  hello_world.prism  matrix_operations.bract  mixed_features.bract  performance_benchmark_suite.bract  phase1_demo.bract  phase2_memory_test.bract  simple_function.prism  simple_test.bract  system_showcase.bract
hello_world.exe/: Bract_runtime.h  hello_world.c  hello_world.h
output/: clean_test.c
output_struct/: test_struct.c  test_struct.h
src/: ast.rs  lib.rs  parser.rs  profiling.rs  visitor.rs
src/ast/: mod.rs  tests.rs  visitor.rs
src/codegen/: bract_ir.rs  build.rs  c_gen.rs  expressions.rs  items.rs  lowering.rs  memory_codegen.rs  mod.rs  native_runtime.c  runtime.rs  statements.rs
src/lexer/: error.rs  lexer.rs  lexer_tests.rs  mod.rs  position.rs  token.rs
src/lsp/: completion.rs  mod.rs
src/parser/: error.rs  expressions.rs  memory_syntax.rs  mod.rs  parser.rs  patterns.rs  statements.rs  tests.rs  types.rs
src/performance/: contracts.rs  estimation.rs  mod.rs  models.rs  profiler.rs
src/semantic/: analyzer.rs  escape_analysis.rs  mod.rs  symbols.rs  (+2 more)
tests/: comprehensive_phase_tests.rs  examples.rs  integration.rs  lexer.rs  mod.rs  parser.rs  semantic.rs
(+9 files in other folders)
