[package]
name = "prism"
version = "0.1.0"
edition = "2021"

[dependencies]
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
env_logger = "0.10"

[[bin]]
name = "prism_compile_simple"
path = "src/bin/prism_compile_simple.rs"

[[bin]]
name = "prism_compile"
path = "src/bin/prism_compile.rs"

[[bin]]
name = "prism_parse"
path = "src/bin/prism_parse.rs"

[[bin]]
name = "prism_lsp"
path = "src/bin/prism_lsp.rs"