[package]
name = "bract"
version = "0.1.0"
edition = "2021"

[dependencies]
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
env_logger = "0.10"
byteorder = "1.5"

# Cranelift Native Code Generation
cranelift = "0.105"
cranelift-codegen = "0.105"
cranelift-frontend = "0.105"
cranelift-module = "0.105"
cranelift-object = "0.105"
cranelift-jit = "0.105"
target-lexicon = "0.12"

[[bin]]
name = "bract_compile_simple"
path = "src/bin/bract_compile_simple.rs"

[[bin]]
name = "bract_compile"
path = "src/bin/bract_compile.rs"

[[bin]]
name = "bract_parse"
path = "src/bin/bract_parse.rs"

[[bin]]
name = "bract_lsp"
path = "src/bin/bract_lsp.rs"

[[bin]]
name = "bract_native"
path = "src/bin/bract_native.rs"

[[bin]]
name = "bract_cranelift"
path = "src/bin/bract_cranelift.rs"